[gd_scene load_steps=4 format=2]

[ext_resource path="res://UserInferface.gd" type="Script" id=1]
[ext_resource path="res://ItemList.tscn" type="PackedScene" id=2]
[ext_resource path="res://add.jpg" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 36.0
color = Color( 0.392157, 0.392157, 0.407843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 83.0
margin_bottom = 32.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadTest" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_left = 87.0
margin_right = 161.0
margin_bottom = 32.0
text = "Load-Test"

[node name="Expander" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 418.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.278431, 0.917647, 0.964706, 1 )
margin_left = 422.0
margin_right = 454.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Add a new Magic Item"
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Expander2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 458.0
margin_right = 790.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 794.0
margin_right = 1024.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 9.0
margin_right = 64.0
margin_bottom = 23.0
text = "Preis in %"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 126.0
margin_bottom = 32.0
hint_tooltip = "Quick Price Modifier"
text = "100"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
hint_tooltip = "Quick Price Modifier"
size_flags_vertical = 4
min_value = 50.0
max_value = 150.0
value = 100.0

[node name="ItemList" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadTest" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_NewItemButton_pressed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/HBoxContainer/LineEdit" to="." method="_quick_price_mod_edit"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HBoxContainer/HSlider" to="." method="_quick_price_mod_slider"]
